--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:4000",
   "author": "Vindhya Raviraj",
   "eslintConfig": {
     "extends": "react-app"
