installed api dependencies - mongoose and express

--- a/api/package.json
+++ b/api/package.json
@@ -8,5 +8,9 @@
     "start": "node server.js"
   },
   "author": "Vindhya Raviraj",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.7.1"
+  }
 }
